# ESP_Develop_Engineer

./: CMakeLists.txt  HxD.rar  README.md  README_CN.md  XCOM V2.6.rar  partitions.csv  sdkconfig  sdkconfig.old  二进制文件合并工具.rar
.cache/clangd/index/: VolcEngineRTCLite.h.5BDB8F79F1746B2A.idx  adler32.c.E5E6BFA00328D50D.idx  aes3_tie_log.c.68DF45C3CE8F2D1D.idx  audio_decoder_reg.c.B323F5758920C7D3.idx  audio_encoder_reg.c.872521DF28845300.idx  audio_processor.c.28122E24409EED8E.idx  audio_processor.h.CFBDE2497473A640.idx  audio_stream.h.8D30311DAD6A44BE.idx  audio_stream_7210.c.314F86D0DF2DF52F.idx  audio_stream_8311.c.A10C3F5CB1C473BF.idx  byte_rtc_request.c.E28B57B4FD14D072.idx  byte_rtc_request.h.3C25F80665FABCCD.idx  compress.c.B60B0E2DC2F13500.idx  config.h.60BF9A0F2BEB5071.idx  crc32.c.060070B0780E4F2B.idx  crc32.h.17F21562582B966B.idx  deflate.c.90AC004F2BE19C63.idx  deflate.h.E6A0E9809284E5A5.idx  dsp_common.h.F22D88FA7E6D0CD0.idx  dsp_err.h.635888BB76F60018.idx  dsp_err_codes.h.F4C6CEBF9CFC1B87.idx  dsp_types.h.FFAED59934DE96FF.idx  dspi_dotprod.h.BBC3C50D35371F10.idx  dspi_dotprod_f32_ansi.c.80014C89A2B214A1.idx  dspi_dotprod_off_f32_ansi.c.A5A7EBFF3B946B64.idx  (+306 more)
components/byte_rtc/: CMakeLists.txt
docs/: 工作笔记.md
main/: CMakeLists.txt  K_Touch.h  Kconfig.projbuild  audio_processor.c  audio_processor.h  audio_stream.h  audio_stream_8311.c  byte_rtc_request.c  byte_rtc_request.h  config.h  esp_psram.c  esp_psram.h  idf_component.yml  lv_conf.h  lvgl_hal.c  lvgl_hal.h  main.c  pinout.h  volc_rtc.c  volc_rtc.h
main/GT911/: GT911.c  GT911.h
main/lv_screen_disp/: lv_screen_home.c  lv_screen_home.h  lv_screen_home_widger.c  lv_widget_screen.c  ui_overlay.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
main/ui/fonts/: opensansb12.c  opensansb16.c  opensansb20.c  opensansb24.c
main/ui/images/: PKQ.c  clean.c  config.c  down.c  ui_Axisdown.c  ui_Axisup.c  ui_CB1.c  ui_Cali.c  ui_Hello.c  ui_HomeAxis.c  ui_HomeDebug.c  ui_HomeFile.c  ui_HomePrint.c  ui_HomeSet.c  ui_Language.c  ui_Leveling.c  ui_Light.c  ui_Lightdown.c  ui_MCU.c  ui_PID.c  ui_Setcolors.c  ui_Setlanguage.c  ui_Setlight.c  ui_Setlightdown.c  ui_Setsystem.c  ui_Setwifi.c  ui_Withdrawal.c  ui_Xadd.c  ui_Xreduce.c  ui_Yadd.c  ui_Yreduce.c  ui_Zadd.c  ui_Zreduce.c  ui_addprint.c  ui_cabin.c  ui_colors.c  ui_complete.c  ui_deleteprint.c  ui_down.c  ui_extrusion.c  (+25 more)
