idf_component_register(
    SRCS 
    "main.c"
    "lvgl_hal.c" 
    "esp_psram.c"
    "GT911/GT911.c"


    "lv_screen_disp/lv_screen_home_widger.c"
    "lv_screen_disp/lv_screen_home.c"
    "lv_screen_disp/lv_widget_screen.c"

    "ui/fonts/opensansb12.c"
    "ui/fonts/opensansb16.c"
    "ui/fonts/opensansb20.c"
    "ui/fonts/opensansb24.c"  


    "ui/images/ui_addprint.c"
    "ui/images/ui_Axisdown.c"
    "ui/images/ui_Axisup.c"
    "ui/images/ui_cabin.c"
    "ui/images/ui_Cali.c"
    "ui/images/ui_colors.c"
    "ui/images/ui_CB1.c"
    "ui/images/ui_complete.c"
    "ui/images/ui_deleteprint.c"
    "ui/images/ui_down.c"
    "ui/images/ui_extrusion.c"
    "ui/images/ui_exturder.c"
    "ui/images/ui_fan.c"
    "ui/images/ui_fanspeed.c"
    "ui/images/ui_feedback.c"
    "ui/images/ui_Hello.c"
    "ui/images/ui_home.c"
    "ui/images/ui_HomeAxis.c"
    "ui/images/ui_HomeDebug.c"
    "ui/images/ui_HomeFile.c"
    "ui/images/ui_homefile1.c"
    "ui/images/ui_HomePrint.c"
    "ui/images/ui_HomeSet.c"
    "ui/images/ui_hotbed.c"
    "ui/images/ui_hotend.c"
    "ui/images/ui_hotendyes.c"
    "ui/images/ui_Language.c"
    "ui/images/ui_Leveling.c"
    "ui/images/ui_Light.c"
    "ui/images/ui_Lightdown.c"
    "ui/images/ui_lock.c"
    "ui/images/ui_PID.c"
    "ui/images/ui_reflash.c"
    "ui/images/ui_resume.c"
    "ui/images/ui_retrun.c"
    "ui/images/ui_Setcolors.c"
    "ui/images/ui_Setlight.c"
    "ui/images/ui_Setlightdown.c"
    "ui/images/ui_Setlanguage.c"
    "ui/images/ui_Setsystem.c"
    "ui/images/ui_Setwifi.c"
    "ui/images/ui_stop.c"
    "ui/images/ui_stoprint.c"
    "ui/images/ui_switch.c"
    "ui/images/ui_tozero.c"
    "ui/images/ui_updata.c"
    "ui/images/ui_Withdrawal.c"
    "ui/images/ui_Xadd.c"
    "ui/images/ui_Xreduce.c"
    "ui/images/ui_Yadd.c"
    "ui/images/ui_Yreduce.c"
    "ui/images/ui_Zadd.c"
    "ui/images/ui_zero.c"
    "ui/images/ui_Zreduce.c"
    "ui/images/ui_MCU.c"
    "ui/images/ui_switch_status.c"
    "ui/images/ui_stl.c"
    "ui/images/ui_timee.c"
    "ui/images/clean.c"
    "ui/images/config.c"
    "ui/images/updata.c"
    "ui/images/up.c"
    "ui/images/down.c"
    "ui/images/PKQ.c"   
    "ui/images/wink_png.c"   
    INCLUDE_DIRS 
    "."
    "ui"
    "lv_screen_disp"
    "GT911"
    
    )
